# hitch-estimation-apriltag-array-release

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  setup.cfg  setup.py  tracks.yaml
config/: params.yaml
debian/: changelog  control  copyright  gbp.conf  rules
hitch_estimation_apriltag_array/: apriltag_array_pose_estimation_node.py  hitch_joint_state_estimation_node.py
launch/: apriltag_array_pose_estimation.launch.xml  hitch_estimation_apriltag_array.launch.xml  hitch_joint_state_estimation.launch.xml
rpm/: ros-humble-hitch-estimation-apriltag-array.spec  ros-jazzy-hitch-estimation-apriltag-array.spec  template.spec
