<package format="3">
  <name>hitch_estimation_apriltag_array</name>
  <version>0.0.2</version>
  <description>
    A package that estimates the hitch joint state between a robot and a
    trailer by optical recognition of an array of April tags mounted at the
    front of the trailer by the rear camera of the robot
  </description>
  <maintainer email="alexandros.filotheou@gmail.com">li9i</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/li9i/apriltag-hitch-estimation</url>
  <url type="repository">https://github.com/li9i/apriltag-hitch-estimation</url>
  <url type="bugtracker">https://github.com/li9i/apriltag-hitch-estimation/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
